<resources>
    <string name="app_name">&TERMUX_DISPLAY_APP_NAME;termux</string>
    <string name="plugin_info">&TERMUX_DISPLAY_APP_NAME; is a plugin app for the &TERMUX_APP_NAME;
        app.
        \n\nCheck &TERMUX_APP_NAME; app github %1$s and &TERMUX_DISPLAY_APP_NAME; app github %2$s for more info.</string>
    <string name="msg_storage_permission_not_granted_warning">The storage permission must be granted
        to &TERMUX_DISPLAY_APP_NAME; app to...</string>
    <string name="action_grant_storage_permission">Grant Storage Permission</string>
    <string name="msg_battery_optimization_not_disabled_warning">Android battery optimizations
        should be disabled for the &TERMUX_DISPLAY_APP_NAME; app so that…
        Check https://developer.android.com/about/versions/oreo/background for more info and
        https://developer.android.com/guide/components/foreground-services#background-start-restrictions
        for more info.

        \n\nAlso check https://dontkillmyapp.com for info on vendor specific app killers.
        Depending on vendor you may need to do things like enable AutoStart, disable DuraSpeed,
        enable `Display pop-up windows while running in the background` for the app.</string>
    <string name="action_disable_battery_optimizations">Disable Battery Optimizations</string>
    <string name="msg_display_over_other_apps_permission_not_granted_warning">The display over other
        apps permission should be granted to &TERMUX_DISPLAY_APP_NAME; app for starting foreground
        activities from background. Check https://developer.android.com/guide/components/activities/background-starts
        for more info.
    </string>
    <string name="action_grant_display_over_other_apps_permission">Grant Draw Over Apps Permission</string>
    <string name="action_already_granted">Already Granted</string>
    <string name="action_already_disabled">Already Disabled</string>
    <string name="not_connected">Not connected</string>
    <string name="help_button_text">   Help   </string>
    <string name="preferences_button_text">   Preferences   </string>
    <string name="extra_keys_config_desc">Here you can set value of extra-keys variable like in Termux app (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) and more (e.g. META).</string>
    <string name="output">Output</string>
    <string name="display_resolution_mode">Display resolution mode</string>
    <string name="display_scale">Display scale, %</string>
    <string name="display_resolution">Display resolution</string>
    <string name="display_resolution_summary">Example: 1280x1024</string>
    <string name="touch_sensitivity">Touch sensitivity, x300ms</string>
    <string name="open_keyboard">Open keyboard</string>
    <string name="inputcontroller">Inputcontroller</string>
    <string name="progress_manager">Progress manager</string>
    <string name="install_x11_server_bridge">Install x11 server bridge</string>
    <string name="stop_desktop">Stop desktop</string>
    <string name="stretch_to_fit_display">Stretch to fit display</string>
    <string name="reseed_screen">Reseed screen while soft keyboard is  open</string>
    <string name="reseed_screen_summary">The screen size will be adjusted while Soft Keyboard is open.</string>
    <string name="pip_mode">PIP mode</string>
    <string name="pip_mode_summary">Show app in picture-in-picture mode when home button or recents button is pressed</string>
    <string name="fullscreen_on_device_display">Fullscreen on device display</string>
    <string name="fullscreen_on_device_display_summary">Toggles immersive mode in your device display</string>
    <string name="force_landscape_orientation">Force landscape orientation</string>
    <string name="hide_display_cutout">Hide display cutout (if any)</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="pointer">Pointer</string>
    <string name="touchscreen_input_mode">Touchscreen input mode</string>
    <string name="apply_display_scale_factor_to_touchpad">Apply display scale factor to touchpad</string>
    <string name="show_stylus_click_options">Show stylus click options</string>
    <string name="show_stylus_click_options_summary">Stylus touch override, left middle or right click (Only for the stylus)</string>
    <string name="show_mouse_click_helper_overlay">Show mouse click helper overlay</string>
    <string name="show_mouse_click_helper_overlay_summary">Onscreen mouse buttons usable with touchpad</string>
    <string name="capture_external_mouse_when_possible">Capture external mouse when  possible</string>
    <string name="capture_external_mouse_when_possible_summary">Intercept all hardware mouse events. Pointer is back to Android after pressing Escape key.</string>
    <string name="enable_tap_to_move_for_touchpads">Enable tap-to-move for touchpads</string>
    <string name="show_additional_keyboard">Show additional keyboard</string>
    <string name="show_additional_keyboard_summary">Show keyboard with additional keys.</string>
    <string name="hide_additional_keyboard_on_volume_down_key_press">Hide additional keyboard on  Volume Down key press</string>
    <string name="show_ime_with_external_keyboard">Show IME with external keyboard</string>
    <string name="show_ime_with_external_keyboard_summary">Show software keyboard while hardware  keyboard is connected. Requires WRITE_SECURE_SETTINGS permission.</string>
    <string name="prefer_scancodes_when_possible">Prefer scancodes when possible</string>
    <string name="prefer_scancodes_when_possible_summary">Let X server handle hardware keyboard layout (with DE settings or setxkbmap).</string>
    <string name="intercept_system_shortcuts">Intercept system shortcuts</string>
    <string name="intercept_system_shortcuts_summary">Samsung Dex only. Allows interception of
        &quot;Alt+F4&quot;, &quot;Meta+D&quot;, &quot;Meta+E&quot;, etc. </string>
    <string name="open_accessibility_settings">Open Accessibility settings.</string>
    <string name="open_accessibility_settings_summary">Enable Accessibility service for   intercepting system shortcuts manually.</string>
    <string name="requires_write_secure_settings">Enable Accessibility service for intercepting system shortcuts automatically.</string>
    <string name="requires_write_secure_settings_summary">Requires WRITE_SECURE_SETTINGS permission.</string>
    <string name="filter_out_intercepted">Filter out intercepted Win (Meta/Mod4) key.</string>
    <string name="filter_out_intercepted_summary">Allows you to use Dex shortcuts while intercepting.</string>
    <string name="extra_keys_config">Extra keys config</string>
    <string name="other">Other</string>
    <string name="automatic_uploading_clipboard">Automatic uploading clipboard to Android</string>
    <string name="request_notification_permission">Request notification permission</string>
    <string name="log_level_title">Log Level</string>
    <string name="log_level_off">Off</string>
    <string name="log_level_normal">Normal</string>
    <string name="log_level_debug">Debug</string>
    <string name="log_level_verbose">Verbose</string>
    <string name="log_level_unknown">*Unknown*</string>
    <string name="log_level_value">Logcat log level set to \"%1$s\"</string>
    <string name="help_button_start_x11">start x11 server</string>
    <string name="x11_server_bridge_config">Reinstall the bridge that the x11 server uses to communicate with termux. The installation will cause the current graphical interface to stop running and require a restart. If any file is not saved, save it and retry.</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="new_container">New Container</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container...</string>
    <string name="removing_container">Removing Container...</string>
    <string name="duplicating_container">Duplicating Container...</string>
    <string name="installing_system_files">Installing System Files...</string>
    <string name="starting_up">Starting up...</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_shortcut">Do you want to remove this shortcut?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this wine version?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="duplicate">Duplicate</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="range">Range</string>
    <string name="version">Version</string>
    <string name="storage_info">Storage Info</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="columns">Columns</string>
    <string name="max_device_memory">Max Device Memory</string>
    <string name="frame_rate">Frame Rate</string>
</resources>