<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        app:key="main"
        app:title="@string/pref_main">
        <Preference
            app:fragment="output"
            app:title="@string/pref_output" />
        <Preference
            app:fragment="pointer"
            app:title="@string/pref_pointer" />
        <Preference
            app:fragment="kbd"
            app:title="@string/pref_kbd" />
        <Preference
            app:fragment="other"
            app:title="@string/pref_other" />
        <Preference
            app:key="version"
            app:title="@string/pref_version" />
    </PreferenceScreen>
    <PreferenceScreen
        app:key="output"
        app:title="@string/pref_output">
        <ListPreference
            app:defaultValue="native"
            app:entries="@array/displayResolutionVariants"
            app:entryValues="@array/displayResolutionVariants"
            app:key="displayResolutionMode"
            app:title="@string/display_resolution_mode" />

        <SeekBarPreference
            android:max="200"
            app:defaultValue="100"
            app:key="displayScale"
            app:title="@string/display_scale" />

        <ListPreference
            app:defaultValue="1280x1024"
            app:entries="@array/displayResolution"
            app:entryValues="@array/displayResolution"
            app:key="displayResolutionExact"
            app:title="@string/display_resolution" />

        <EditTextPreference
            app:defaultValue="1280x1024"
            app:key="displayResolutionCustom"
            app:summary="@string/display_resolution_summary"
            app:title="@string/display_resolution" />
        <SeekBarPreference
            app:defaultValue="1"
            app:key="touch_sensitivity"
            app:max="20"
            app:title="@string/touch_sensitivity" />
        <Preference
            app:key="open_keyboard"
            app:title="@string/open_keyboard" />
        <Preference
            app:key="select_controller"
            app:title="@string/open_controller" />
        <Preference
            app:key="open_progress_manager"
            app:title="@string/progress_manager" />
        <Preference
            app:key="install_x11_server_bridge"
            app:title="@string/install_x11_server_bridge" />
        <Preference
            app:key="stop_desktop"
            app:title="@string/stop_desktop" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enableFloatBallMenu"
            app:summary="@string/enabl_float_ball_menu_notice"
            app:title="@string/enabl_float_ball_menu" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enableGlobalFloatBallMenu"
            app:title="@string/enable_global_float_ball_menu" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="displayStretch"
            app:title="@string/stretch_to_fit_display" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="Reseed"
            app:summary="@string/reseed_screen_summary"
            app:title="@string/reseed_screen" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="PIP"
            app:summary="@string/pip_mode_summary"
            app:title="@string/pip_mode" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="fullscreen"
            app:summary="@string/fullscreen_on_device_display_summary"
            app:title="@string/fullscreen_on_device_display" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="forceLandscape"
            app:title="@string/force_landscape_orientation" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="hideCutout"
            app:title="@string/hide_display_cutout" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="keepScreenOn"
            app:title="@string/keep_screen_on" />
    </PreferenceScreen>
    <PreferenceScreen
        app:key="pointer"
        app:title="@string/pref_pointer">
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/touchscreenInputModesEntries"
            app:entryValues="@array/touchscreenInputModesValues"
            app:key="touchMode"
            app:title="@string/touchscreen_input_mode" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="scaleTouchpad"
            app:title="@string/apply_display_scale_factor_to_touchpad" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="showStylusClickOverride"
            app:summary="@string/show_stylus_click_options_summary"
            app:title="@string/show_stylus_click_options" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="showMouseHelper"
            app:summary="@string/show_mouse_click_helper_overlay_summary"
            app:title="@string/show_mouse_click_helper_overlay" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="stylusIsMouse" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="stylusButtonContactModifierMode" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pointerCapture"
            app:summary="@string/capture_external_mouse_when_possible_summary"
            app:title="@string/capture_external_mouse_when_possible" />
        <ListPreference
            app:defaultValue="no"
            app:entries="@array/transformCapturedPointerEntries"
            app:entryValues="@array/transformCapturedPointerValues"
            app:key="transformCapturedPointer" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="tapToMove"
            app:title="@string/enable_tap_to_move_for_touchpads" />
        <SeekBarPreference
            android:max="200"
            app:defaultValue="100"
            app:key="capturedPointerSpeedFactor"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
    </PreferenceScreen>
    <PreferenceScreen
        app:key="kbd"
        app:title="@string/pref_kbd">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="showAdditionalKbd"
            app:summary="@string/show_additional_keyboard_summary"
            app:title="@string/show_additional_keyboard" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:isPreferenceVisible="false"
            app:key="additionalKbdVisible" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="hideEKOnVolDown"
            app:title="@string/hide_additional_keyboard_on_volume_down_key_press" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="showIMEWhileExternalConnected"
            app:summary="@string/show_ime_with_external_keyboard_summary"
            app:title="@string/show_ime_with_external_keyboard" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="preferScancodes"
            app:summary="@string/prefer_scancodes_when_possible_summary"
            app:title="@string/prefer_scancodes_when_possible" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="hardwareKbdScancodesWorkaround" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="dexMetaKeyCapture"
            app:summary="@string/intercept_system_shortcuts_summary"
            app:title="@string/intercept_system_shortcuts" />

        <Preference
            app:key="enableAccessibilityService"
            app:summary="@string/open_accessibility_settings_summary"
            app:title="@string/open_accessibility_settings" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enableAccessibilityServiceAutomatically"
            app:summary="@string/requires_write_secure_settings_summary"
            app:title="@string/requires_write_secure_settings" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pauseKeyInterceptingWithEsc" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="filterOutWinkey"
            app:summary="@string/filter_out_intercepted_summary"
            app:title="@string/filter_out_intercepted" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="enforceCharBasedInput" />

        <Preference
            app:key="extra_keys_config"
            app:title="@string/extra_keys_config" />
    </PreferenceScreen>

    <PreferenceScreen
        app:key="other"
        app:title="@string/pref_other">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="clipboardEnable"
            app:title="@string/automatic_uploading_clipboard" />

        <Preference
            app:key="requestNotificationPermission"
            app:title="@string/request_notification_permission" />
    </PreferenceScreen>
    <PreferenceScreen app:key="ekbar">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="adjustHeightForEK" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="useTermuxEKBarBehaviour" />
        <SeekBarPreference
            app:defaultValue="100"
            app:key="opacityEKBar"
            app:max="100"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
        <EditTextPreference app:key="extra_keys_config" />
    </PreferenceScreen>
    <PreferenceScreen app:key="userActions">
        <ListPreference
            app:defaultValue="no action"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues"
            app:key="swipeUpAction" />
        <ListPreference
            app:defaultValue="toggle additional key bar"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues"
            app:key="swipeDownAction" />
        <ListPreference
            app:defaultValue="no action"
            app:entries="@array/userActionsVolumeUpValues"
            app:entryValues="@array/userActionsVolumeUpValues"
            app:key="volumeUpAction" />
        <ListPreference
            app:defaultValue="no action"
            app:entries="@array/userActionsVolumeDownValues"
            app:entryValues="@array/userActionsVolumeDownValues"
            app:key="volumeDownAction" />
        <ListPreference
            app:defaultValue="toggle soft keyboard"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues"
            app:key="backButtonAction" />
        <ListPreference
            app:defaultValue="open preferences"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues"
            app:key="notificationTapAction" />
        <ListPreference
            app:defaultValue="open preferences"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues"
            app:key="notificationButton0Action" />
        <ListPreference
            app:defaultValue="exit"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues"
            app:key="notificationButton1Action" />
        <ListPreference
            app:defaultValue="no action"
            app:entries="@array/userActionsMediaKeyValues"
            app:entryValues="@array/userActionsMediaKeyValues"
            app:key="mediaKeysAction" />
    </PreferenceScreen>
</PreferenceScreen>
