<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SVersion"
            android:entries="@array/dxvk_version_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frame_rate" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SFramerate"
            android:entries="@array/dxvk_framerate_entries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_device_memory" />

        <Spinner
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:id="@+id/SMaxDeviceMemory"
            android:entries="@array/dxvk_max_device_memory_entries" />
    </LinearLayout>
</ScrollView>